[gd_scene load_steps=7 format=3 uid="uid://d1eme8vjjcd34"]

[ext_resource type="Script" path="res://src/GameField/MainScene.gd" id="1_fcdyl"]
[ext_resource type="Texture2D" uid="uid://bw4ti7ji6xg16" path="res://icon.svg" id="1_g6awj"]
[ext_resource type="Texture2D" uid="uid://dpq7trobiisdd" path="res://assets/backgrounds/wood_240x240.png" id="3_j7xvc"]
[ext_resource type="Texture2D" uid="uid://gr8j8k68ub8o" path="res://assets/backgrounds/table.png" id="4_ixhuf"]
[ext_resource type="PackedScene" uid="uid://ulydrceem7fg" path="res://src/UI/ProjectileButt.tscn" id="4_p185g"]
[ext_resource type="PackedScene" uid="uid://meav3ml5vmta" path="res://src/AiAgent/Player.tscn" id="5_7y0iy"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fcdyl")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.47451, 0.435294, 0.67451, 0.666667)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_g6awj")

[node name="AimField" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="AimField"]
self_modulate = Color(0.380392, 1, 1, 0.701961)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_j7xvc")
stretch_mode = 1

[node name="Table" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 120.0
offset_right = -200.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ixhuf")
expand_mode = 1

[node name="VBoxLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = -100.0
grow_vertical = 2

[node name="Apple" parent="VBoxLeft" instance=ExtResource("4_p185g")]
layout_mode = 2
mouse_filter = 1
projectile = "Apple"

[node name="Banana" parent="VBoxLeft" instance=ExtResource("4_p185g")]
layout_mode = 2
projectile = "Banana"

[node name="Grape" parent="VBoxLeft" instance=ExtResource("4_p185g")]
layout_mode = 2
projectile = "Grape"

[node name="Pineapple" parent="VBoxLeft" instance=ExtResource("4_p185g")]
layout_mode = 2
projectile = "Pineapple"

[node name="Watermelon" parent="VBoxLeft" instance=ExtResource("4_p185g")]
layout_mode = 2
projectile = "Watermelon"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("5_7y0iy")]
position = Vector2(548, 314)

[node name="AiField" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 156.0
offset_right = 159.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
